chore: added few prints

--- a/setup/beanleaf_classification_azure_dataset.ipynb
+++ b/setup/beanleaf_classification_azure_dataset.ipynb
@@ -195,11 +195,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [],
       "source": [
         "input_data = Dataset.File.from_files(ds.path('beanleaf_dataset')).as_named_input('input').as_mount()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 148,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(Dataset.File.from_files(ds.path('beanleaf_dataset')).as_named_input('input').path_on_compute)"
       ]
     },
     {
