code clean up and deployment is wip

--- a/setup/iac.ipynb
+++ b/setup/iac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,20 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new beanleaf-classifier-cluster\n",
-      "InProgress.\n",
-      "SucceededProvisioning operation finished, operation \"Succeeded\"\n",
-      "Succeeded\n",
-      "AmlCompute wait for completion finished\n",
-      "\n",
-      "Minimum number of nodes requested have been provisioned\n"
+      "Found existing beanleaf-classifier-cluster\n"
      ]
     }
    ],
