yaml set auth enabled to false

--- a/setup/iac.ipynb
+++ b/setup/iac.ipynb
@@ -161,6 +161,43 @@
     "    # Wait for the cluster to complete, show the output log\n",
     "    cpu_cluster.wait_for_completion(show_output=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"path\": \"https://beanipm.pbgworks.org/sites/pbg-beanipm7/files/styles/picture_custom_user_wide_1x/public/AngularLeafSpotFig1a.jpg\"}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'path': 'https://beanipm.pbgworks.org/sites/pbg-beanipm7/files/styles/picture_custom_user_wide_1x/public/AngularLeafSpotFig1a.jpg'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "\n",
+    "raw_data = {'path': 'https://beanipm.pbgworks.org/sites/pbg-beanipm7/files/styles/picture_custom_user_wide_1x/public/AngularLeafSpotFig1a.jpg'}\n",
+    "print(json.dumps(raw_data))\n",
+    "req = json.loads(json.dumps(raw_data))\n",
+    "req\n",
+    "\n",
+    "# data = json.loads(raw_data)\n",
+    "# content = requests.get(data['path']).content\n",
+    "# content"
+   ]
   }
  ],
  "metadata": {
