chore: cleanup - folder name & structure, filenames and added md files

--- a/2_azure_training/beanleaf_classification_azure_dataset.ipynb
+++ b/2_azure_training/beanleaf_classification_azure_dataset.ipynb
@@ -199,7 +199,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Only for test purpose, you can ignore this cell"
+        "### Only for test purpose, otherwise you can ignore this cell"
       ]
     },
     {
@@ -216,7 +216,8 @@
         }
       ],
       "source": [
-        "%%writefile ./dummy_train.py\n",
+        "%%writefile ./mount_test.py\n",
+        "\n",
         "\n",
         "# Copyright (c) Microsoft Corporation. All rights reserved.\n",
         "# Licensed under the MIT License.\n",
@@ -229,12 +230,11 @@
         "print(\"Hello Azure ML!\")\n",
         "\n",
         "mounted_input_path = sys.argv[1]\n",
-        "# mounted_output_path = sys.argv[2]\n",
         "\n",
         "print(\"Argument 1: %s\" % mounted_input_path)\n",
         "\n",
         "path_to_file = os.path.join(mounted_input_path, 'train/healthy/healthy_train.0.jpg')\n",
-        "print(\"Path to file:\", path_to_file)\n",
+        "print(\"Path to file2:\", path_to_file)\n",
         "file_exists = exists(path_to_file)\n",
         "print(\"File healthy_train.0.jpg - \", file_exists)\n",
         "\n",
@@ -249,9 +249,7 @@
         "train_ds = tf.keras.preprocessing.image_dataset_from_directory(training_path,\n",
         "                                                        seed=111,\n",
         "                                                        image_size=(img_height, img_width),\n",
-        "                                                        batch_size=batch_size)\n",
-        "\n",
-        "print('Training DS')"
+        "                                                        batch_size=batch_size)"
       ]
     },
     {
