chore: updated folder names and created data folder

--- a/3_azure_training/beanleaf_classification_azure_dataset.ipynb
+++ b/3_azure_training/beanleaf_classification_azure_dataset.ipynb
@@ -11,7 +11,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2022-09-14 11:48:17.608876: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "2022-09-20 14:48:19.693191: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
           ]
         }
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,14 +56,14 @@
         "workspace_region = os.getenv(\"WORKSPACE_REGION\", default=\"centralus\")\n",
         "cluster_name = os.getenv(\"CLUSTER_NAME\", default=\"beanleaf-classifier-cluster\")\n",
         "dataset_path_in_datastore = os.getenv(\"BLOB_STORAGE_PATH\", default=\"beanleaf\")\n",
-        "data_local_directory = os.getenv(\"DATA_LOCAL_DIRECTORY\", default=\"./beans/\")\n",
+        "data_local_directory = os.getenv(\"DATA_LOCAL_DIRECTORY\", default=\"../0_data/beanleaf_dataset/\")\n",
         "experiment_name = os.getenv(\"EXPERIMENT_NAME\", default=\"BeanClassifierNotebookExperiment\")\n",
         "blob_container = os.getenv(\"BLOB_CONTAINER\", default=\"beanleaf_dataset\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -73,12 +73,21 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Warning: Falling back to use azure cli login credentials.\n",
+            "If you run your code in unattended mode, i.e., where you can't give a user input, then we recommend to use ServicePrincipalAuthentication or MsiAuthentication.\n",
+            "Please refer to aka.ms/aml-notebook-auth for different authentication mechanisms in azureml-sdk.\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
               "Workspace.create(name='beanleaf_classifier', subscription_id='d6233897-5c9f-47f9-8507-6d4ada2d5183', resource_group='RG_Jaganlal')"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -92,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -101,7 +110,7 @@
               "AmlCompute(workspace=Workspace.create(name='beanleaf_classifier', subscription_id='d6233897-5c9f-47f9-8507-6d4ada2d5183', resource_group='RG_Jaganlal'), name=beanleaf-classifier-cluster, id=/subscriptions/d6233897-5c9f-47f9-8507-6d4ada2d5183/resourceGroups/RG_Jaganlal/providers/Microsoft.MachineLearningServices/workspaces/beanleaf_classifier/computes/beanleaf-classifier-cluster, type=AmlCompute, provisioning_state=Succeeded, location=centralus, tags={})"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -121,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "ev5mV-qU8FtC"
       },
@@ -132,7 +141,7 @@
           "text": [
             "Compute Target: beanleaf-classifier-cluster\n",
             "Datastore: workspaceblobstore\n",
-            "Experiment: BeanClassifierExperiment\n"
+            "Experiment: BeanClassifierNotebookExperiment\n"
           ]
         }
       ],
