updated iac.ipynb to create and upload dataset

--- a/2_cloud_setup/iac.ipynb
+++ b/2_cloud_setup/iac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,9 @@
    ],
    "source": [
     "import azureml\n",
-    "from azureml.core import Workspace\n",
+    "from azureml.core import Workspace, Datastore, Experiment\n",
+    "from azureml.core.dataset import Dataset\n",
+    "from azureml.data.datapath import DataPath\n",
     "\n",
     "# check core SDK version number\n",
     "print(\"Azure ML SDK Version: \", azureml.core.VERSION)"
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,9 @@
     "workspace_name = os.getenv(\"WORKSPACE_NAME\", default=\"beanleaf_classifier\")\n",
     "workspace_region = os.getenv(\"WORKSPACE_REGION\", default=\"centralus\")\n",
     "cluster_name = os.getenv(\"CLUSTER_NAME\", default=\"beanleaf-classifier-cluster\")\n",
-    "dataset_path_in_datastore = os.getenv(\"BLOB_STORAGE_PATH\", default=\"beanleaf\")"
+    "dataset_path_in_datastore = os.getenv(\"BLOB_STORAGE_PATH\", default=\"beanleaf\")\n",
+    "data_local_directory = os.getenv(\"DATA_LOCAL_DIRECTORY\", default=\"../0_data/beanleaf_dataset/\")\n",
+    "experiment_name = os.getenv(\"EXPERIMENT_NAME\", default=\"beanleaf_classifier_experiment\")"
    ]
   },
   {
@@ -46,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +59,15 @@
      "text": [
       "Warning: Falling back to use azure cli login credentials.\n",
       "If you run your code in unattended mode, i.e., where you can't give a user input, then we recommend to use ServicePrincipalAuthentication or MsiAuthentication.\n",
-      "Please refer to aka.ms/aml-notebook-auth for different authentication mechanisms in azureml-sdk.\n"
+      "Please refer to aka.ms/aml-notebook-auth for different authentication mechanisms in azureml-sdk.\n",
+      "get_workspace error using subscription_id=d6233897-5c9f-47f9-8507-6d4ada2d5183, resource_group_name=RG_Jaganlal, workspace_name=beanleaf_classifier\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Workspace configuration succeeded. Skip the workspace creation steps below\n"
+      "Workspace not accessible. Change your parameters or create a new workspace below\n"
      ]
     }
    ],
@@ -92,14 +97,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deploying KeyVault with name beanleafkeyvault22524ada.\n",
-      "Deploying StorageAccount with name beanleafstorage655e3ae74.\n",
-      "Deploying AppInsights with name beanleafinsights8a53cc9b.\n",
-      "Deployed AppInsights with name beanleafinsights8a53cc9b. Took 17.88 seconds.\n",
-      "Deployed KeyVault with name beanleafkeyvault22524ada. Took 25.62 seconds.\n",
-      "Deployed StorageAccount with name beanleafstorage655e3ae74. Took 31.98 seconds.\n",
+      "Deploying KeyVault with name beanleafkeyvault8b059324.\n",
+      "Deploying AppInsights with name beanleafinsightsccd4d1e4.\n",
+      "Deployed AppInsights with name beanleafinsightsccd4d1e4. Took 14.68 seconds.\n",
+      "Deploying StorageAccount with name beanleafstorage78ca4e858.\n",
+      "Deployed StorageAccount with name beanleafstorage78ca4e858. Took 33.62 seconds.\n",
+      "Deployed KeyVault with name beanleafkeyvault8b059324. Took 29.91 seconds.\n",
       "Deploying Workspace with name beanleaf_classifier.\n",
-      "Deployed Workspace with name beanleaf_classifier. Took 323.1 seconds.\n"
+      "Deployed Workspace with name beanleaf_classifier. Took 47.11 seconds.\n"
      ]
     }
    ],
@@ -135,7 +140,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found existing beanleaf-classifier-cluster\n"
+      "Creating new beanleaf-classifier-cluster\n",
+      "InProgress.\n",
+      "SucceededProvisioning operation finished, operation \"Succeeded\"\n",
+      "Succeeded\n",
+      "AmlCompute wait for completion finished\n",
+      "\n",
+      "Minimum number of nodes requested have been provisioned\n"
      ]
     }
    ],
@@ -161,11 +172,60 @@
     "    # Wait for the cluster to complete, show the output log\n",
     "    cpu_cluster.wait_for_completion(show_output=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compute Target: beanleaf-classifier-cluster\n",
+      "Datastore: workspaceblobstore\n",
+      "Experiment: beanleaf_classifier_experiment\n"
+     ]
+    }
+   ],
+   "source": [
+    "ws = Workspace.get(name=workspace_name,\n",
+    "                    subscription_id=subscription_id,\n",
+    "                    resource_group=resource_group)\n",
+    "# Connect to compute for training\n",
+    "compute_target = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "print(\"Compute Target:\", compute_target.name)\n",
+    "\n",
+    "# Connect to the datastore for the training images\n",
+    "ds = Datastore.get_default(ws)\n",
+    "print(\"Datastore:\", ds.name)\n",
+    "\n",
+    "# Connect to the experiment\n",
+    "exp = Experiment(workspace=ws, name=experiment_name)\n",
+    "print(\"Experiment:\", exp.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upload data to AzureML Datastore\n",
+    "ds = ws.get_default_datastore()\n",
+    "ds = Dataset.File.upload_directory(src_dir=data_local_directory,\n",
+    "            target=DataPath(ds, 'beanleaf_dataset'),\n",
+    "            show_progress=True, overwrite=True)\n",
+    "\n",
+    "# Register file dataset with AzureML\n",
+    "ds = ds.register(workspace=ws, name=\"beanleaf\", description=\"Bean leaves with train, test and validation folders\", create_new_version=True)\n",
+    "print(f'Dataset {ds.name} registered.')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('azureml-env')",
+   "display_name": "Python 3.9.7 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +244,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9e6e75f6c09cdd31724a6f99b4657e6fb2ea3eb30505782f5f4c6411602ce5a1"
+    "hash": "353b3b27b727b6bd6d2ff14a3cfe5fe1f5dd4da0574e2f8e60138a2d59c0439e"
    }
   }
  },
