chore: create folder ../0_data

--- a/1_model_development/beanleaf_classification_local_dataset.ipynb
+++ b/1_model_development/beanleaf_classification_local_dataset.ipynb
@@ -71,12 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "ev5mV-qU8FtC"
       },
       "outputs": [],
       "source": [
+        "!mkdir '../0_data/'\n",
         "local_data_path = '../0_data/beanleaf_dataset'\n",
         "!mkdir $local_data_path"
       ]
@@ -100,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
